--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+pytest = "*"
+pytest-mock = "*"
 
 [packages]
+boto3 = "*"
 
 [requires]
 python_version = "3.7"
